# Projects

Messager/: Guest.bat  Guest.lnk  Server.bat  Server.lnk  config.ps1  connection.txt
Messager/Guest/: CMakeLists.txt  GuestBackend.h  Main.qml  main.cpp
Messager/Server/: CMakeLists.txt  Main.qml  ServerBackend.h  cppBackend.h  main.cpp
